--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,16 +1,13 @@
-cmake_minimum_required(VERSION 2.6)
-project(pmr)
+set ( PMRS_SRCS
+        CommandParser.cpp
+        Commands.cpp
+        Compiler.cpp
+        ErrorReporter.cpp
+        Line.cpp
+        Preprocessor.cpp
+        Startup.cpp
+        TokenParser.cpp
+        )
 
-set(CMAKE_INCLUDE_CURRENT_DIR True)
-set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
+add_executable(pmrs ${PMRS_SRCS})
 
-set(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake/modules ${CMAKE_MODULE_PATH} ${CMAKE_SOURCE_DIR}/cmake/modules ${CMAKE_PREFIX_PATH}/share/apps/cmake/modules)
-
-find_package(SFML REQUIRED COMPONENTS audio graphics window system)
-include_directories(${SFML_INCLUDE_DIR})
-
-set(CMAKE_CXX_FLAGS "-std=c++11")
-set(CMAKE_CXX_FLAGS_DEBUG "-g -std=c++11 -Wall")
-
-add_subdirectory(src)
-add_subdirectory(PMRS)
